--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <h2 class="heading"><i class="fa-solid fa-chalkboard-teacher"></i> OPERATION POST-UTME TIMETABLE <i class="fa-solid fa-fist-raised"></i></h2>
   <input type="text" id="search" placeholder="Search for subjects, tutors, or days...">
-  <button id="print-btn">Print Timetable</button>
+  <button id="print-btn"><i class="fa-solid fa-print"></i> Print Timetable</button>
   <table id="timetable">
     <tr>
       <th>Day</th>
